work in progress

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ node_modules/shutdown
 node_modules/spritesheet
 node_modules/ssh2
 node_modules/strings
+backend/node_modules/adult_profiles
+node_modules/adult_profiles
