--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"dependencies": {
 		"core": "^1.0.0",
 		"helpers": "^1.0.0",
-		"repositories_helper": "^1.0.0"
+		"repositories_helper": "^1.0.0",
+		"uuid": "^3.3.3"
 	},
 	"devDependencies": {},
 	"scripts": {
