--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
 	"main": "index.js",
 	"dependencies": {
 		"core": "^1.0.0",
+		"enums": "^1.0.0",
 		"express": "^4.17.1",
 		"express-ws": "^4.0.0",
 		"helpers": "^1.0.0",
 		"repositories_helper": "^1.0.0",
-		"uuid": "^3.3.3"
+		"strings": "^4.17.1",
+		"uuid": "^3.3.3",
+		"websocket": "^1.0.31"
 	},
 	"devDependencies": {},
 	"scripts": {
