--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-backend/node_modules/aibackend/node_modules/cachebackend/node_modules/cdnbackend/node_modules/clientbackend/node_modules/corebackend/node_modules/dalbackend/node_modules/dnsbackend/node_modules/enumsbackend/node_modules/file_systembackend/node_modules/github_automationbackend/node_modules/godaddybackend/node_modules/googlebackend/node_modules/helpersbackend/node_modules/hostsbackend/node_modules/interserver_communicationbackend/node_modules/ipcbackend/node_modules/lifecyclebackend/node_modules/load_balancingbackend/node_modules/logbackend/node_modules/middlewarebackend/node_modules/multimediabackend/node_modules/pmsbackend/node_modules/pornsitebackend/node_modules/precompilationbackend/node_modules/prerenderingbackend/node_modules/quadtreebackend/node_modules/shutdownbackend/node_modules/spritesheetbackend/node_modules/ssh2backend/node_modules/stringsnode_modules/ainode_modules/cachenode_modules/cdnnode_modules/clientnode_modules/corenode_modules/dalnode_modules/dnsnode_modules/enumsnode_modules/file_systemnode_modules/github_automationnode_modules/godaddynode_modules/googlenode_modules/helpersnode_modules/hostsnode_modules/interserver_communicationnode_modules/ipcnode_modules/lifecyclenode_modules/load_balancingnode_modules/lognode_modules/middlewarenode_modules/multimedianode_modules/pmsnode_modules/pornsitenode_modules/precompilationnode_modules/prerenderingnode_modules/quadtreenode_modules/shutdownnode_modules/spritesheetnode_modules/ssh2node_modules/stringsbackend/node_modules/adult_profilesnode_modules/adult_profilesbackend/node_modules/watchdognode_modules/watchdogbackend/node_modules/tipplernode_modules/tipplerbackend/node_modules/tippler_dnsnode_modules/tippler_dnsbackend/node_modulesnode_modulesbackend/node_modules/.gitnode_modules/.gitnode_modules/repositories_helper
 node_modules/core
 node_modules/helpers
 backend/node_modules
 node_modules
 node_modules/enums
 node_modules/strings
+backend/node_modules/core
+backend/node_modules/enums
+backend/node_modules/helpers
+backend/node_modules/strings
